src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Lead_Sub_Source__c</fullName>
        <label>Lead Sub Source</label>
        <picklist>
            <controllingField>LeadSource</controllingField>
            <picklistValues>
                <fullName>SM Self Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99 acres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magic Bricks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Common Floor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Different Areas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibition Names</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Different Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Times of India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sakal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra Times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lokmat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loksatta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio Mirchi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fever 104</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akurdi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alandi Devachi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alandi Khed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alandi Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambegaon BK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anandnagar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Bank_Name__c</fullName>
        <label>Loan Bank Name</label>
        <picklist>
            <picklistValues>
                <fullName>PNB HFL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Piramal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICICI Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kotak Mahindra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suvarnayug Sahakari Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCO Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axis Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bajaj Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDBI</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Lost to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Budget / Lost Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Decision / Non-Responsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <label>Mailing Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marital_Family_Status__c</fullName>
        <label>Marital/ Family Status</label>
        <picklist>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unmarried</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Source__c</fullName>
        <label>Marketing Source</label>
        <picklist>
            <picklistValues>
                <fullName>Presales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect Referal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loyalty Referal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Tie Ups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS Blast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SM Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xanadu Contact Center</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_sub_source__c</fullName>
        <label>Marketing Sub-Source</label>
        <picklist>
            <picklistValues>
                <fullName>Xanadu Contact Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect Referal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loyalty Referal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Tie Ups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS Blast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SM Data</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_Landline_number_and_email_id_is__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile, Landline Number and Email Id Is</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_No_O__c</fullName>
        <label>Mobile No(O)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile_of_Refree__c</fullName>
        <label>Mobile Of Refree</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MyID__c</fullName>
        <externalId>true</externalId>
        <label>MyID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_O__c</fullName>
        <label>Name(O)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_NRI_SM__c</fullName>
        <label>Name of NRI SM</label>
        <picklist>
            <picklistValues>
                <fullName>Chandrashekhar Arelly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forum Gandhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kastrell Rawat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maurya Krishna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sahaj Arora</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sahil Bhatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vivek Venkateswar</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_of_Refree__c</fullName>
        <label>Name Of Refree</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_TL__c</fullName>
        <label>Closing TL</label>
        <picklist>
            <picklistValues>
                <fullName>Vasundhara S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prashant Kalal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vivek Mishra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vivek Pathak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kaustabh Dutta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kunal Takle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Namonarayan Shirothiya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaurav B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abhishek Mishra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atul Chordia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vickrant Agarwal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shailesh Khandelwal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jagrat Ranka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parkeen Shah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keyur Pandey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vishal Bafna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vaibhav Andhare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vishal Mantri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ravi Sharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pratima Soni</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_of_the_Financial_Institution__c</fullName>
        <label>Name Of The Financial Institution</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negotiation_Mail__c</fullName>
        <label>Negotiation Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>New_Channel_Partner_Email__c</fullName>
        <label>New Channel Partner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>New_Channel_Partner_Name__c</fullName>
        <label>New Channel Partner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Channel_Partner_Phone__c</fullName>
        <label>New Channel Partner Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Newspaper_Date__c</fullName>
        <label>Lead Source Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Action_Date_VDNB__c</fullName>
        <label>Next Action Date For VDNB Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Action_Date__c</fullName>
        <label>Next Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_Of_Properties__c</fullName>
        <label>No Of Properties</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Site_Visits__c</fullName>
        <label>Number Of Site Visits</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OS_NRI_SM__c</fullName>
        <label>OS/NRI SM</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OS_NRI_TL__c</fullName>
        <label>OS/NRI TL</label>
        <picklist>
            <picklistValues>
                <fullName>NO OS/NRI TL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maurya Krishna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandrashekhar Arelly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <picklist>
            <picklistValues>
                <fullName>Salaried Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Promoters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housewife</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opp_Open_mail__c</fullName>
        <label>Opp Open mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity_Ageing__c</fullName>
        <formula>Today() - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Ageing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Modified_Ageing__c</fullName>
        <formula>Today() - DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Modified Ageing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Applicants_Email__c</fullName>
        <label>Other Applicants Email</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Applicants_Name__c</fullName>
        <label>Other Applicants Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Applicants_Pancard__c</fullName>
        <label>Other Applicants Pancard</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overwriting_Cancellation_White_ink_sign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overwriting/Cancellation/White Ink-Sign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PAN_Card_No__c</fullName>
        <label>PAN Card No.</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAN_Card_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PAN Card Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PAN_of_applicants__c</fullName>
        <label>PAN No. Of Applicants</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POI_Card_If_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POI Card If Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POI_Card_No__c</fullName>
        <label>POI Card No.</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Running__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Page Running</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passport_No__c</fullName>
        <label>Passport No.</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passport_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passport Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Expected_Date__c</fullName>
        <label>Payment Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_Comments__c</fullName>
        <label>Payment Plan Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_Fixed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Plan Fixed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_Status__c</fullName>
        <label>Payment Plan Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_Type__c</fullName>
        <label>Payment Plan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Permanent_Address__c</fullName>
        <label>Permanent Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Person_Email__c</fullName>
        <formula>Account.PersonContact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_No_Landline__c</fullName>
        <label>Phone No(Landline)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_document_received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Physical Document Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Possession_Date__c</fullName>
        <label>Possession Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Possession_Greetings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Possession Greetings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Possession_Requirement__c</fullName>
        <label>Possession Requirement</label>
        <picklist>
            <picklistValues>
                <fullName>Ready to Live In (RTLI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Move in (RTMI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Construction (UC – 1 to 2 years)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Construction (UC – 2 to 3 years)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Construction (UC – More than 3 years)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Presales_Call_counter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Presales Call Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Project_Name__c</fullName>
        <label>Previous Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Email__c</fullName>
        <label>Primary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Name__c</fullName>
        <label>Primary Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Phone__c</fullName>
        <label>Primary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_pancard__c</fullName>
        <label>Primary PAN Card</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Association__c</fullName>
        <label>Professional Association</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Subtype__c</fullName>
        <label>Project Subtype</label>
        <picklist>
            <picklistValues>
                <fullName>1 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Showroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio Apartment</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Unit</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <errorMessage>Project field is blank or Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Project_Unit__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project_Unit__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Name</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProposalSharedTime__c</fullName>
        <label>ProposalSharedTime</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_shared_mail__c</fullName>
        <label>Proposal shared mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose of Purchase</label>
        <picklist>
            <picklistValues>
                <fullName>Capital Gain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirement house</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second home</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RATING__c</fullName>
        <label>PSC Rating</label>
        <picklist>
            <picklistValues>
                <fullName>HOT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WARM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COLD</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RD_Special_Deviations__c</fullName>
        <label>Special Deviations</label>
        <picklist>
            <controllingField>Special_Deviations__c</controllingField>
            <picklistValues>
                <fullName>Adhoc Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architectural Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior &amp; Internal Amenities of the Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RM_Case_Status__c</fullName>
        <label>RM Case Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Interaction_Date__c</fullName>
        <label>RM Interaction Date</label>
        <type>Date</type>
    </fields>
</CustomObject>